<resources>
    <string name="app_name">Expenser</string>
    <string name="title_home">Home</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_categories_list">Categories List</string>
    <string name="title_categories">Categories</string>
    <string name="expenser">Expenser</string>
    <string name="expenser_descriptions">Observe your expenses</string>
    <string name="add">Add</string>
    <string name="insert_expense">Insert expense</string>
    <string name="choose_category">category</string>
    <string name="budget">Budget:</string>
    <string name="planned_expenses">Planned expenses:</string>
    <string name="expense_date">Pick date:</string>
    <string name="confirm_new_expense_period">Submit</string>
    <string name="add_new_category">New category</string>
    <string name="title_login">Login/Register</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter password</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="register_button">Register</string>
    <string name="category_budget">Category Budget</string>
    <string name="cancel">Cancel</string>
    <string name="_0">0</string>
    <string name="expenses">Expenses:</string>
    <string name="date_end">End Date:</string>
    <string name="planned">Planned:</string>
    <string name="money_spent">Spent:</string>
    <string name="budget_date_end">Do you want to submit this budget?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="budget_date_end_title">Finish date has passed</string>
    <string name="active">Active:</string>
    <string name="end_budget_period">End Budget Period</string>
    <string name="budget_date_end_title_manualy">Manualy submit budget</string>
    <string name="analytics_pie_chart_title">Money spent per category</string>
    <string name="analytics_bar_chart_title">Money spent/Planned budget per category</string>
    <string name="budget_list">Budget list</string>
    <string name="new_budget">Add new budget</string>
</resources>