<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_gravity="top"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/budget_date_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_budget"
        android:text="@string/budget_date_end"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="top">
        <Button
            android:id="@+id/budget_date_end_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="12sp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/budget_date_end_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="12sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>