<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.expenses.ExpensesFragment"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/text_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_budget"
            android:textAlignment="textStart"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/budget_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:minWidth="85dp"/>

            <EditText
                android:id="@+id/budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">
            <TextView
                android:id="@+id/expense_period_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_date"
                android:textSize="18sp"
                android:textStyle="bold"
                android:minWidth="85dp"
                android:textColor="@color/black"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/expense_period_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_edit_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_new_category_expenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_new_category"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue" />

            <Button
                android:id="@+id/submit_new_expenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_new_expense_period"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">

            <TextView
                android:id="@+id/planned_expenses_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/planned_expenses"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/planned_expenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:text="@string/_0"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="16sp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expenses_categories_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            tools:listitem="@layout/single_category"/>
    </LinearLayout>
</ScrollView>
