<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_gravity="top"
    tools:context=".ui.expenses.ExpensesFragment">

    <Spinner
        android:id="@+id/add_category_expenses_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/add_category_budget_expenses_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_budget"
        android:inputType="number"
        android:textAlignment="center"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="top">
        <Button
            android:id="@+id/add_category_expenses_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/add_category_expenses_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="12sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>