<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.analytics.AnalyticsFragment"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="10dp">

        <TextView
            android:id="@+id/analytics_pie_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/analytics_pie_chart_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_analytics"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            />

        <TextView
            android:id="@+id/analytics_bar_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/analytics_bar_chart_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_analytics"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/analytics_budgets_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/budget_list"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/analytics_budgets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            tools:listitem="@layout/single_budget_overview"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</ScrollView>
