<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.SingleBudgetFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_2"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/single_budget_budget_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:width="85dp"/>
        <TextView
            android:id="@+id/single_budget_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/single_budget_planned_expenses_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planned"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:width="85dp"/>

        <TextView
            android:id="@+id/single_budget_planned_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/single_budget_expenses_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:width="85dp"/>

        <TextView
            android:id="@+id/single_budget_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/single_budget_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:width="85dp"/>

        <TextView
            android:id="@+id/single_budget_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_single_budget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        tools:listitem="@layout/single_budget_category" />

</LinearLayout>
