<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="16dp"
    android:layout_margin="2dp">

    <FrameLayout
        android:background="@color/blue"
        android:layout_width="2dp"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/single_budget_overview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@color/white_3"
        >

        <LinearLayout
            android:id="@+id/single_budget_overview_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/single_budget_overview_linear_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">
                <TextView
                    android:id="@+id/single_budget_overview_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_end"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:width="75dp" />
                <TextView
                    android:id="@+id/single_budget_overview_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2021-06-24"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:minWidth="100dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/single_budget_overview_linear_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <TextView
                    android:id="@+id/single_budget_overview_active_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:width="75dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/single_budget_overview_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/single_budget_overview_budget_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/single_budget_overview_linear_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">
                <TextView
                    android:id="@+id/single_budget_overview_budget_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:width="75dp"/>
                <TextView
                    android:id="@+id/single_budget_overview_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4000"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:minWidth="100dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/single_budget_overview_linear_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <TextView
                    android:id="@+id/single_budget_overview_expenses_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:width="75dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:id="@+id/single_budget_overview_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3750"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:minWidth="100dp"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/single_budget_overview_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            tools:listitem="@layout/single_budget_category" />
    </LinearLayout>
</androidx.cardview.widget.CardView>